err/sgactions.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sgactions'...
Compiling './lib/python3.5/site-packages/sgactions/deploy.py'...
***   File "./lib/python3.5/site-packages/sgactions/deploy.py", line 36
    for key, menu_items in sorted(existing.iteritems(), key=lambda (k, mi): (mi[0]['list_order'], mi[0]['title'])):
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sgactions/dispatch.py'...
***   File "./lib/python3.5/site-packages/sgactions/dispatch.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sgactions/register.py'...
***   File "./lib/python3.5/site-packages/sgactions/register.py", line 28
    print '\tChecking', path
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sgactions/utils.py'...
***   File "./lib/python3.5/site-packages/sgactions/utils.py", line 13
    print '=' * len(str(title))
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sgactions-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
